[package]
name = "robopoker"
version = "0.1.1"
authors = ["Kelechi Ukah <ukahkelechi@gmail.com>"]
description = "Implementations of No-Limit Texas Hold-Em solution."
homepage = "https://github.com/krukah/robopoker"
repository = "https://github.com/krukah/robopoker"
readme = "README.md"
keywords = ["poker", "cards", "cfr", "mcts", "holdem"]
license = "MIT"
edition = "2021"
default-run = "robopoker"
build = "build.rs"

[dependencies]
petgraph = "0.6.5"
bytes = "1.0"
log = "0.4.22"
byteorder = "1.5.0"
futures = "0.3"
serde_json = "1.0"
rand = { version = "0.8.5", features = ["small_rng"] }
colored = { version = "2.0", optional = true }
dialoguer = { version = "0.11.0", optional = true }
num_cpus = { version = "1.16.0", optional = true }
rayon = { version = "1.10.0", optional = true }
indicatif = { version = "0.17.8", optional = true }
simplelog = { version = "0.12.2", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
tokio-postgres = { version = "0.7", optional = true }
clap = { version = "4.0", features = ["derive"], optional = true }
actix-web = { version = "4.4", optional = true }
actix-cors = { version = "0.6", optional = true }
serde = { version = "1.0", features = ["derive"] }
env_logger = { version = "0.11.6", optional = true }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2", features = ["js"] }
rustc-hash = "1.1"
zstd = { version = "0.12", features = ["zstdmt"] }
dashmap = { version = "6.1", features = ["rayon"] }
parking_lot = "0.12"
smallvec = "1.11"
ahash = "0.8"
half = "2.4"
memmap2 = { version = "0.9", optional = true }
arrow2 = { version = "0.18", features = ["io_parquet", "io_parquet_compression"] }

# Platform-specific dependencies
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", optional = true }

[lib]
name = "robopokerlib"
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
wasm-bindgen-test = "0.3"

[[bench]]
name = "benchmarks"
harness = false

[features]
default = ["native"]
shortdeck = []
subgame = ["native"]
native = [
    "colored",
    "dialoguer",
    "num_cpus",
    "rayon",
    "indicatif",
    "simplelog",
    "tokio",
    "tokio-postgres",
    "clap",
    "actix-web",
    "actix-cors",
    "env_logger",
    "memmap2",
    "tikv-jemallocator"
]

[[bin]]
name = "analysis_cli"
path = "src/analysis_cli.rs"
required-features = ["subgame"]

[profile.release]
debug = true

[build-dependencies]
toml = "0.8"